--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /sites/default/**/files
 /sites/default/**/private
 
+# Ignore development modules.
+/sites/*/modules/local
+
 # Packages #
 ############
 *.7z
