--- a/sites/all/modules/custom/shopify_enhancements/js/app/package.json
+++ b/sites/all/modules/custom/shopify_enhancements/js/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "JS Build Process",
   "scripts": {
-    "build": "browserify -d -t [ babelify --presets [ react es2015 ] ] main.js -o bundle.js | uglifyjs -cmo bundle.min.js -- bundle.js",
+    "build": "NODE_ENV=production browserify -d -t [ babelify --presets [ react es2015 ] ] main.js | uglifyjs -cmo bundle.js",
     "watch": "watchify -d -t [ babelify --presets [ react es2015 ] ] main.js -o bundle.js"
   },
   "author": "Sean Sehr",
