--- a/sites/all/themes/mts/package.json
+++ b/sites/all/themes/mts/package.json
@@ -2,15 +2,16 @@
   "name": "STARTER",
   "version": "0.0.2",
   "devDependencies": {
-    "node-sass": "~3.4.2",
+    "font-awesome": "~4.5.0",
     "grunt": "~1.0.1",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-sass": "^1.1.0",
-    "grunt-drush": "*",
-    "node-bourbon": "1.2.3",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-drush": "*",
+    "grunt-postcss": "^0.8.0",
+    "grunt-sass": "^1.1.0",
     "load-grunt-tasks": "~0.6.0",
-    "font-awesome": "~4.5.0"
+    "node-bourbon": "1.2.3",
+    "node-sass": "~3.4.2"
   }
 }
